# pycam_bot

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  lint.yml
etc/: pycam_bot.example.ini  pycam_bot.ini
src/pycam_bot/: __init__.py  __main__.py  bot.py  routines.py
tasks/: _post_generation.py  release.py
tests/: __init__.py  test_core.py
