[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "pycam-bot"
description = "A python twitch chat bot for my twitch channel cam_doc"
authors = [
    {name = "Pierre Marijon", email = "pierre@marijon.fr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "twitchio>=2.4.0",
    "obs-websocket-py>=0.5.3",
]
dynamic = ["version"]

classifiers = [
    "Development Status :: 3 - Alpha"
]

[project.urls]
Repository = "https://github.com/natir/pycam-bot"
Homepage = "https://github.com/natir/pycam-bot"

[tool.pdm]
version = {use_scm = true}
package-dir = "src"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=6.1",
]
dev = [
    "towncrier>=19.2",
    "parver>=0.3",
]

[tool.pdm.scripts]
release = "python -m tasks.release"
test = "pytest tests/"

lint = "pre-commit run --all-files"

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/fixtures
)/
'''

[tool.towncrier]
package = "pycam_bot"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/natir/pycam-bot/issues/{issue})"
directory = "news/"
start_string = "<!-- insertion marker -->"
title_format = "[v{version}](https://github.com/natir/pycam-bot/releases/tag/{version}) ({project_date})"
template = "news/towncrier_template.md"
underlines = "-~^"

[[tool.towncrier.type]]
directory = "feature"
name = "Features & Improvements"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "dep"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removals and Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellany"
showcontent = true

[tool.isort]
profile = "black"
atomic = true
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = ["pycam_bot"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning"
]
