[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "pycam-bot"
description = "A python twitch chat bot for my twitch channel cam_doc"
authors = [
    {name = "Pierre Marijon", email = "pierre@marijon.fr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "twitchio>=2.4.0",
    "obsws-python>=1.0.4",
]
dynamic = ["version"]

classifiers = [
    "Development Status :: 3 - Alpha"
]

[project.urls]
Repository = "https://github.com/natir/pycam-bot"
Homepage = "https://github.com/natir/pycam-bot"

[project.scripts]
pycam_bot = "pycam_bot.__main__:main"

[project.optional-dependencies]
[tool.pdm]
version = {use_scm = true}
package-dir = "src"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=6.1",
]
dev = [
    "isort>=5",
    "parver>=0.3",
    "mypy>=0.971",
    "black>=22",
]

[tool.pdm.scripts]
release = "python -m tasks.release"
test = "pytest tests/"

lint = "pre-commit run --all-files"

[tool.black]
line-length = 120
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/fixtures
)/
'''

[tool.isort]
profile = "black"
atomic = true
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = ["pycam_bot"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning"
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
python_version = "3.10"
show_error_codes = true
warn_unused_ignores = true
exclude = [
  '\.eggs$',
  '\.git$',
  '\.mypy_cache$',
  '\.tox$',
  '\.venv$',
  '_build$',
  'buck-out$',
  'build$',
  'dist$',
  'tests/fixtures$',
  '^noxfile\.py$',
  '^tasks/'
]
